update cypress locator generation